{
    "name": "PlayerInputs",
    "maps": [
        {
            "name": "Camera",
            "id": "85dedbd7-60d0-4d40-9502-012ca6263f1f",
            "actions": [
                {
                    "name": "Delta",
                    "type": "PassThrough",
                    "id": "90e215eb-1418-4e92-ba5c-5e81f4b48b73",
                    "expectedControlType": "Delta",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Drag",
                    "type": "Button",
                    "id": "2657f348-3a55-4e93-a494-5401a4aea842",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Turn",
                    "type": "Button",
                    "id": "1be0bab2-07e6-42d0-8202-f2e6cdc40aa1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Zoom",
                    "type": "PassThrough",
                    "id": "acbac2ee-d446-4d9e-af91-1e34040b34a8",
                    "expectedControlType": "Delta",
                    "processors": "NormalizeVector2",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "b6f681ef-c2d0-4610-93ec-ee210130cbb5",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Delta",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e3b03f04-16b1-42d9-a574-323556801a5f",
                    "path": "<Mouse>/middleButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Drag",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "99815935-bc48-4cb7-ba43-826ee3336aad",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Turn",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "eb1d41a1-96e0-48c9-af63-57a859b3525e",
                    "path": "<Mouse>/scroll",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Zoom",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "MemberAction",
            "id": "dfabe36c-fb2d-45bb-a47b-32888276fc6a",
            "actions": [
                {
                    "name": "Crouch",
                    "type": "Button",
                    "id": "fca7ff70-4018-46dd-9378-15431c5c8872",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "DisableRun",
                    "type": "Button",
                    "id": "2c7dd204-ad82-49ca-9f3d-94b34a891f48",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "EnableRun",
                    "type": "Button",
                    "id": "3155c688-a1e1-4cbf-8e54-8f4cbef9b31c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "MultiTap(tapDelay=0.3)",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "93314583-f917-4bc8-a730-c66b3d6f5f67",
                    "path": "<Keyboard>/c",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Crouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cfcb23a0-5f11-4dc2-a729-c402e2b9e284",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "EnableRun",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1561a508-2c9b-4042-8c93-ee0ab1b67fa1",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DisableRun",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "StateAction",
            "id": "030191a0-a08a-453b-8899-ff4a7d209690",
            "actions": [
                {
                    "name": "Pause",
                    "type": "Button",
                    "id": "6a321b27-f359-4a1a-ab92-53a6c58ecc09",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "1896b257-79d2-4f44-8379-b7e518dea3c2",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "UI",
            "id": "6d18b041-6f47-4ddf-a59e-ec430e30c1ba",
            "actions": [],
            "bindings": []
        }
    ],
    "controlSchemes": []
}